crates/ladder_types/tests/ui/generated/should_fail/test__kiss_ladder__R3_minus_R0.stderr
error[E0308]: mismatched types
 --> tests/ui/generated/should_fail/test__kiss_ladder__R3_minus_R0.rs:5:24
  |
5 |    let _ = R3::new() - R0::new();
  |                        ^^^^^^^^^ expected `3`, found `0`
  |
  = note: expected struct `Relative<3>`
             found struct `Relative<0>`
